--- a/install
+++ b/install
@@ -11,8 +11,8 @@ DOTBOT_BIN="bin/dotbot"
 BASEDIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 
 cd "${BASEDIR}"
-git -C "${DOTBOT_DIR}" submodule sync --quiet --recursive
-git submodule update --init --recursive "${DOTBOT_DIR}"
+git -C "${BASEDIR}" submodule sync --quiet --recursive
+git submodule update --init --recursive "${BASEDIR}"
 
 # Get Plugins
 declare -a PLUGINS
