--- a/install
+++ b/install
@@ -19,7 +19,8 @@ declare -a PLUGINS
 PLUGINS=("--plugin-dir" "${PLUGINDIR}" \
   "--plugin-dir" "${PLUGINDIR}/dotbot-ifplatform" \
   "--plugin-dir" "${PLUGINDIR}/dotbot-brew" \
-  "--plugin-dir" "${PLUGINDIR}/dotbot-apt" 
+  "--plugin-dir" "${PLUGINDIR}/dotbot-apt" \
+  "--plugin-dir" "${PLUGINDIR}/dotbot-sudo" 
 )
 
 "${BASEDIR}/${DOTBOT_DIR}/${DOTBOT_BIN}" -d "${BASEDIR}"  "${PLUGINS[@]}" -c "${CONFIG}" "${@}"
